# flexIRF

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL  Makefile.am  README  README.md  configure.ac  setup.sh  shippable.yml
CMakeModules/: FindCFITSIO.cmake
dummy/: dummyconfig.txt  dummypdf-2D.txt  dummypdf-3D.txt
examples/: README.md  testEffArea.fits  testEffAreaBINTABLE.fits  testParamEffArea.fits  testRoot2FITS_converter.fits  testRoot2FITS_converterBINTABLE.fits
flexirf/: CMakeLists.txt  Makefile.am
flexirf/include/: GIRF.h  GIRFAxis.h  GIRFAxisBins.h  GIRFAxisParam.h  GIRFConfig.h  GIRFPdf.h  GIRFRange.h  GIRFUtils.h  GMetaData.h  rootincludes.h
flexirf/src/: GIRF.cc  GIRFAxis.cc  GIRFAxisBins.cc  GIRFAxisParam.cc  GIRFConfig.cc  GIRFPdf.cc  GIRFRange.cc  GIRFUtils.cc  GMetaData.cc
include/: rootincludes.h
prodfiles/: DESY.d20140105.Erec1.V3.ID0NIM2.prod2-Tenerife-NS.N.2NN-MST.180000s.root
pyext/: GIRF.i  IRFsimpleTests.i  Makefile.am  irfConvert.i  setup.py  setup.py.backup  setup.py.in
pyext/girf/: __init__.py  convert.i  irf.i  simpleTest.i
src/: IRFconverter_root2FITS.cc  IRFgenerator_rootio.cc  IRFmerger_fitsio.cc  IRFsimpleMerger.cc  IRFsimpleReadIrf.cc  IRFsimpleReadParamIrf.cc  IRFsimpleTests.cc  IRFsimpleWriteIrf.cc  IRFsimpleWriteIrfSerialization.cc  IRFsimpleWriteParamIrf.cc  Makefile.am
